fix author icon alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -869,7 +869,7 @@ img.avatar {
 }
 
 .avatar-page-author {
-	margin-top: 150px;
+	margin-top: 300px;
 	padding: 10px;
 	background: white;
 }
